--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,18 +3,15 @@ environment:
     PYTHON: "C:\\Python27"
     PYTHON_VERSION: "2.7.8"
     PYTHON_ARCH: "32"
-    
-    CONAN_UPLOAD: 0
+
+    MINGW_CONFIGURATIONS: "6.2@x86_64@seh@posix, 4.9@x86_64@seh@posix"
+    CONAN_ARCHS: "x86_64"
+    CONAN_VISUAL_VERSIONS: "14"
+
+    CONAN_UPLOAD: 1
     CONAN_REFERENCE: "gflags/master"
     CONAN_USERNAME: "sunside"
     CONAN_CHANNEL: "ci"
-    CONAN_TOTAL_PAGES: 4
-    
-    matrix:
-        - CONAN_CURRENT_PAGE: 1
-        - CONAN_CURRENT_PAGE: 2  
-        - CONAN_CURRENT_PAGE: 3
-        - CONAN_CURRENT_PAGE: 4
 
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
